# yap

./: .gitignore  Cargo.toml
src/: colours.rs  dirs.rs  lib.rs  main.rs  message.rs  state.rs  style.rs  theme.rs  types.rs
src/client/: message.rs  mod.rs
src/common/: net.rs
src/server/: client_handler.rs  mod.rs
src/theme/: container.rs  mod.rs
src/yap/: boot.rs  mod.rs  titlebar.rs  update.rs  view.rs
src/yap/messagebar/: mod.rs  update.rs  view.rs
yapnet/: Cargo.toml
yapnet/src/: connect.rs  error.rs  lib.rs  message.rs  receiver.rs  sender.rs
