[package]
name = "yap"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-channel = "0.5.15"
hashbrown = "0.15.3"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "time", "sync", "net"] }
tokio-byteorder = "0.3.0"
uuid = { version = "1.17.0", features = ["v4", "serde"] }

[dependencies.iced]
version = "0.14.0-dev"
git = "https://github.com/iced-rs/iced.git"
features = [
	"image",
	"svg",
	"advanced",
	"tokio",
	"fira-sans",
	"wgpu",
	"tiny-skia",
	"tokio",
]
