[package]
name = "yapnet"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "time", "sync", "net", "io-util"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
